variables.Variables.scala.error
Erreur de compilation :
Variables:4: error: value unary_! is not a member of Int
while(!x==0) {recule();x=x-1}
      ^